# Noto

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: azure-static-web-apps-agreeable-sea-0a1c4b10f.yml  azure-static-web-apps-wonderful-beach-0c2e9840f.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: window-default.json
src-tauri/permissions/: app.toml
src-tauri/src/: main.rs  mod.rs
src-tauri/src/FileExplorer/: commands.rs  file_node.rs
src-tauri/vault/: new-note-1746317543790.md  new-note-1746317913349.md  new-note-1746317919175.md  new-note-1746317938559.md
src-tauri/vault/new-folder-1746317540348/: README.md
src/lib/: FileNodes_types.ts  api.ts  types.ts
src/lib/Editor/: MdRules.ts
src/lib/Modals/Modal_Info/: Modal_Info.css  Modal_Info.svelte  Modal_Info.ts
src/lib/apis/: FileExplorer_api.ts  MenuBar_api.ts
src/routes/: +layout.svelte  +layout.ts
src/routes/components/: FileExplorer.svelte  SidebarIcons.svelte
src/routes/components/Editor/: Editor.css  Editor.svelte
src/routes/components/Editor/EditorMd/: EditorMd.svelte
src/routes/components/EditorMd/: EditorMd.css  EditorMd.svelte  EditorMd.ts
src/routes/components/FileExplorer/: FileExplorer.css  FileExplorer.svelte  FileExplorer.ts
src/routes/components/MenuBar/: MenuBar.css  MenuBar.svelte
src/routes/lib/: stores.ts  types.ts
src/stores/: tree.ts
src/styles/: global.css
