[package]
name = "Noto"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6.0"
walkdir = "2.5"
rayon = { version = "1.10", features = ["web_spin_lock"] }
tauri-plugin-dialog = "2.2.2"
uuid = { version = "1.17.0", features = ["v4"] }
ignore = "0.4.23"
crossbeam-channel = "0.5"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[tauri.allowlist.event]
all = false
listen = true
emit = true
unlisten = true
